--- a/AAF_Inmobiliaria/Views/Shared/_Layout.cshtml
+++ b/AAF_Inmobiliaria/Views/Shared/_Layout.cshtml
@@ -87,8 +87,8 @@
                                 </div>
                             </form>
                             <hr>
-                            <a class="dropdown-item text-dark" asp-controller="Propietarios" asp-action="Edit"><i class="lnr lnr-exit"></i> Modificar Usuario</a>
-                            <a class="dropdown-item text-dark" asp-controller="Propietarios" asp-action="Logout"><i class="lnr lnr-exit"></i> Salir</a>
+                            <a class="dropdown-item text-dark" asp-controller="Usuarios" asp-action="Edit"><i class="lnr lnr-exit"></i> Modificar Usuario</a>
+                            <a class="dropdown-item text-dark" asp-controller="Usuarios" asp-action="Logout"><i class="lnr lnr-exit"></i> Salir</a>
                         </div>
                     </li>
                     <!--FIN USUARIO CABECERA-->
