--- a/AAF_Inmobiliaria/Views/Inmuebles/Index.cshtml
+++ b/AAF_Inmobiliaria/Views/Inmuebles/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="form mt-5 container-fluid">
     <nav class="mt-4 navbar navbar-light bg-light">
         <a class="navbar-brand text-info">Inmuebles Actuales</a>
-        <form class="form-inline" asp-controller="Inmuebles" asp-action="Index">                    
+        <form>
             <div class="input-group">
                 <input class="form-control my-0 py-1 lime-border" type="text" name="dni" maxlength="8" placeholder="Buscar Propietario por DNI" required pattern="[0-9]{8,8}">
                 <div class="input-group-append">
@@ -16,8 +16,6 @@
             </div>
         </form>
     </nav>
-    @if (Model != null && Model.Count() != 0)
-    {
         <section id="destinos">
             <!-- Inmueble inicio fila(row) -->
             <div class="row scrollspy-example">
@@ -139,6 +137,12 @@
                                             </p>
                                         </div>
                                         <div class="form-group">
+
+                                            <p class="font-small">
+                                                Numero de ambiente:
+                                                <strong class="text-success">@Html.DisplayFor(modelItem => item.InmuebleId)</strong>
+                                            </p>
+
                                             <p class="font-small">
                                                 Numero de ambiente:
                                                 <strong class="text-success">@Html.DisplayFor(modelItem => item.Ambientes)</strong>
@@ -200,7 +204,6 @@
                 </div>
                 <!-- Inmueble cierre fila(row) -->
             </section>
-    }
         </div>   
 
 
